Fix spacing, clipping and people in thread section

--- a/src/components/HomeHeader/HomeHeader.module.scss
+++ b/src/components/HomeHeader/HomeHeader.module.scss
@@ -1,7 +1,7 @@
 .fullHeader {
   display: grid;
-  height: 117px;
-  padding-top: 25px;
+  height: 128px;
+  padding-top: 22px;
 }
 
 .smallHeader {
