--- a/src/components/PeopleList/PeopleList.module.scss
+++ b/src/components/PeopleList/PeopleList.module.scss
@@ -11,7 +11,7 @@
 
 .heading {
   position: fixed;
-  top: 117px;
+  top: 128px;
   width: 100%;
   height: 44px;
   background-color: var(--background-site);
