--- a/src/pages/Settings.module.scss
+++ b/src/pages/Settings.module.scss
@@ -1,6 +1,6 @@
 .fullHeader {
   display: grid;
-  height: 117px;
+  height: 128px;
   align-items: center;
   justify-content: left;
 
